--- a/data/export/monit_user/monitrc.erb
+++ b/data/export/monit_user/monitrc.erb
@@ -1,6 +1,9 @@
 <% engine.each_process do |name, process| %>
   <% 1.upto(engine.formation[name]) do |num| %>
 check process <%= app %>-<%= name %>-<%= num %> with pidfile <%= File.join(pid_dir, "#{name}-#{num}.pid") %>
+  mode passive
   group <%= app %>-<%= name %>
+  if totalmem > 200.0 MB for 5 cycles then alert
+  if cpu > 90% for 5 cycles then alert
   <% end %>
 <% end -%>
