--- a/data/export/upstart_user/process.conf.erb
+++ b/data/export/upstart_user/process.conf.erb
@@ -4,12 +4,5 @@ respawn
 
 chdir <%= engine.root %>
 env PORT=<%= port %>
-env RAILS_ENV=production
-<% engine.env.each_pair do |var,env| %>
-env <%= var.upcase %>=<%= shell_quote(env) %>
-<% end %>
 
-script
-  export PATH="$HOME/.rbenv/shims:$HOME/.rbenv/bin:$PATH"
-  exec <%= process.command %> >> <%= log %>/<%=name%>-<%=num%>.log 2>&1
-end script
+exec sudo -i -u inspire bash -c "<%= process.command %> >> <%= log %>/<%=name%>-<%= app %>.log 2>&1"
