Start processes without sudo

--- a/data/export/upstart_user/process.conf.erb
+++ b/data/export/upstart_user/process.conf.erb
@@ -5,4 +5,7 @@ respawn
 chdir <%= engine.root %>
 env PORT=<%= port %>
 
-exec sudo -i -u inspire bash -c "<%= process.command %> >> <%= log %>/<%=name%>-<%= app %>.log 2>&1"
+script
+  . $HOME/.bashrc
+  <%= process.command %> >> <%= log %>/<%=name%>-<%= app %>.log 2>&1
+end script
