--- a/data/export/upstart_user/unicorn.conf.erb
+++ b/data/export/upstart_user/unicorn.conf.erb
@@ -3,5 +3,9 @@ stop on stopping <%= app %>
 respawn
 
 chdir <%= engine.root %>
+env WEB_CONCURRENCY=<%= num %>
 
-exec sudo -i -u inspire bash -c "WEB_CONCURRENCY=<%= num %> bin/unicorn -c unicorn.rb >> <%= log %>/<%=name%>.log 2>&1"
+script
+  . $HOME/.bashrc
+  <%= process.command %> >> <%= log %>/<%=name%>.log 2>&1
+end script
